# dynamic-wireguard

./: Cargo.toml  README.md  run_client.sh
client/: Cargo.toml
client/bak/: conn_rsp.rs
client/src/: fingerprint.rs  interface.rs  main.rs  packet.rs  user_input.rs
common/: Cargo.toml
common/src/: conv.rs  crypto.rs  lib.rs
server/: Cargo.toml  spec.txt
server/bak/: conn_req.rs  conn_rsp.rs
server/src/: conv.rs  fingerprint.rs  magic.rs  main.rs  packet.rs
spec/: packet_id_map.txt
src/: auth.rs  conv.rs  crypto.rs  lib.rs  logger.rs  magic.rs  wgconfig.rs
