[package]
name = "dynwg-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
futures = "0.3.21"

rand_core = { version = "0.5", default-features = false, features = ["getrandom"] }
x25519-dalek = "1"
sha1 = "0.10.1"

bishop = "0.3.4"
hex = "0.4.3"
colored = "2.0.0"

# netlink stuff
genetlink = "0.2.3"
rtnetlink = "0.10.1"
netlink-packet-core = "0.4.2"
netlink-packet-generic = "0.3.1"
netlink-packet-wireguard = "0.2.1"